WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246753
WebGL compilation disabling WebGL 2 is broken
https://bugs.webkit.org/show_bug.cgi?id=246753
Summary
WebGL compilation disabling WebGL 2 is broken
Alejandro G. Castro
Reported
2022-10-19 11:17:25 PDT
WebGLVertexArrayObject is part of the WebGL 2 API but there are some places in the code where it was added under the WEBGL ifdef instead of WEBGL2
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2022-10-19 11:25:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5544
EWS
Comment 2
2022-10-20 01:23:37 PDT
Committed
255778@main
(6b4ed06fa609): <
https://commits.webkit.org/255778@main
> Reviewed commits have been landed. Closing PR #5544 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-20 01:24:20 PDT
<
rdar://problem/101371285
>
Fujii Hironori
Comment 4
2022-10-20 13:27:54 PDT
Does GTK port still need ENABLE_WEBGL2 macro? Why don't you just remove all ENABLE_WEBGL2 macro? IIUC, there is no port disabling ENABLE_WEBGL2 if ENABLE_WEBGL is on.
Alejandro G. Castro
Comment 5
2022-10-20 13:41:16 PDT
Apparently we are still doing it for some images we are generating for rpi devices, it would be great to do that if we don't find problems with devices that do not support opengles3.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug