Cherry-pick 255778@main (6b4ed06fa609). https://bugs.webkit.org/show_bug.cgi?id=246753

WebGL compilation disabling WebGL 2 is broken
    https://bugs.webkit.org/show_bug.cgi?id=246753

    Reviewed by Kenneth Russell.

    WebGLVertexArrayObject is part of the WebGL 2 API but there are some
    places in the code where it was added under the WEBGL ifdef instead of WEBGL2.

    * Source/WebCore/inspector/InspectorCanvas.cpp:
    * Source/WebCore/inspector/InspectorCanvasCallTracer.h:

    Canonical link: https://commits.webkit.org/255778@main